<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin" >
	    
        <!-- Button (Default) -->
        <TextView
            android:text="@string/button_category_default"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
			<Button
			    style="@null"
			    android:id="@+id/listPopupButton"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/button_default" />
		
			<Button
			    style="@null"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:enabled="false"
			    android:text="@string/button_disabled" />
		
			<Button
			    style="?android:attr/buttonStyleSmall"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/button_small" />
		</LinearLayout>

        <!-- Colored button -->
        <TextView
            android:text="@string/button_category_colored"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/coloredButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimary"
                android:text="@string/button_default" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimary"
                android:enabled="false"
                android:text="@string/button_disabled" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimary"
                android:text="@string/button_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimaryDark"
                android:text="@string/button_default" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimaryDark"
                android:enabled="false"
                android:text="@string/button_disabled" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimaryDark"
                android:text="@string/button_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="@color/button_color"
                android:text="@string/button_default" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/button_disabled" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="@color/button_color"
                android:text="@string/button_small" />
        </LinearLayout>

		<!-- Borderless button -->
        <TextView
            android:text="@string/button_category_borderless"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />
        
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_borderless_default" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_borderless_disabled" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/button_borderless_colored" />

		</LinearLayout>
	
	
		<!-- Image buttons -->
        <TextView
            android:text="@string/button_category_imagebutton"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:contentDescription="@string/button_image_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_logo" />

            <ImageButton
                android:contentDescription="@string/button_image_colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimary"
                android:padding="16dp"
                android:src="@drawable/ic_logo" />

            <ImageButton
                android:contentDescription="@string/button_image_colored_bright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:color="?colorPrimaryDark"
                android:padding="16dp"
                android:src="@drawable/ic_logo" />

        </LinearLayout>
	
		<!-- Toggle Button -->
        <TextView
            android:text="@string/button_category_toggle"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />
        
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
			<ToggleButton
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
			<ToggleButton
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:enabled="false"
			    android:checked="false" />
			<ToggleButton
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:enabled="false"
			    android:checked="true" />
		</LinearLayout>
		
	
		<!-- Switch -->
        <TextView
            android:text="@string/button_category_switch"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />
        
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
			<android.support.v7.widget.SwitchCompat
			    android:checked="true"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
			<android.support.v7.widget.SwitchCompat
			    android:enabled="false"
			    android:checked="true"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
			<android.support.v7.widget.SwitchCompat
			    android:enabled="false"
			    android:checked="false"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" />
		</LinearLayout>
	
	</LinearLayout>
</ScrollView>
