<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin" >

        <!-- Number picker -->
        <TextView
            android:text="@string/number_picker_title"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Date picker -->
        <TextView
            android:text="@string/date_picker_title"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Time picker -->
        <TextView
            android:text="@string/time_picker_title"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
