<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <!-- Circular -->
        <TextView
            android:text="@string/progress_circular"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:progressBarStyleSmall" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:progressBarStyleLarge" />

        </LinearLayout>

        <!-- Horizontal (indeterminate) -->
        <TextView
            android:text="@string/progress_horizontal_indeterminate"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <!-- Horizontal (normal) -->
        <TextView
            android:text="@string/progress_horizontal_normal"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="10"
            android:secondaryProgress="40"/>

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            android:secondaryProgress="70" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="80"
            android:secondaryProgress="90"/>

        <!-- SeekBars -->
        <TextView
            android:text="@string/progress_seekbars"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="62"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="38"/>

        <SeekBar
            android:id="@+id/myseekbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:progress="62"/>

        <SeekBar
            android:id="@+id/myseekbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:progress="38" />

        <!-- RatingBar -->
        <TextView
            android:text="@string/progress_ratingbars"
            style="@style/SectionTextViewStyle" />
        <View style="@style/SectionDividerStyle" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:ratingBarStyleSmall"
            android:isIndicator="false" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:ratingBarStyleIndicator"
            android:isIndicator="false" />

    </LinearLayout>

</ScrollView>
