<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gm__solid_primary"
                android:minHeight="?attr/actionBarSize"
                android:elevation="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@drawable/gm__solid_primary"
                android:elevation="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" >

                <!-- Activity type -->
                <TextView
                    android:text="@string/main_category_activity_type"
                    style="@style/SectionTextViewStyle" />
                <View style="@style/SectionDividerStyle"/>

                <Spinner
                    android:id="@+id/activitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- Style -->
                <TextView
                    android:text="@string/main_category_style"
                    style="@style/SectionTextViewStyle"/>
                <View style="@style/SectionDividerStyle"/>

                <Spinner
                    android:id="@+id/themeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_start_activity"
                    android:layout_marginTop="12dp"
                    android:color="?colorAccent"/>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_background"
            android:src="@drawable/ic_logo"
            android:elevation="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="48dp"
            android:layout_marginRight="32dp"/>

    </RelativeLayout>

</ScrollView>

