<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gm__solid_primary"
        android:minHeight="?attr/actionBarSize"
        android:elevation="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/overrideSwitch"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/overrideText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_colors_override_on"
            android:layout_marginLeft="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_colors_accent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"/>

        <View
            android:id="@+id/accent_preview"
            android:background="@drawable/gm__solid_accent"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/accent_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:max="360"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_colors_primary"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"/>

        <View
            android:id="@+id/primary_preview"
            android:background="@drawable/gm__solid_primary"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:gravity="center_vertical" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/primary_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:max="360"/>

    <ToggleButton
        android:id="@+id/lightToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="end"
        android:background="@null"
        android:drawableRight="?android:listChoiceIndicatorMultiple"
        android:textOn="Light"
        android:textOff="Dark"
        android:capitalize="none"/>

</LinearLayout>

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fab_background"
        android:src="@drawable/ic_done"
        android:elevation="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginRight="16dp"/>

</RelativeLayout>